
NULL =

uidir = $(datadir)/gnome-disk-utility/

ui_DATA = 				\
	edit-crypttab-dialog.ui		\
	edit-filesystem-dialog.ui	\
	edit-fstab-dialog.ui		\
	edit-partition-dialog.ui	\
	edit-gpt-partition-dialog.ui	\
	edit-dos-partition-dialog.ui	\
	palimpsest.ui			\
	unlock-device-dialog.ui		\
	format-volume-dialog.ui		\
	smart-dialog.ui			\
	$(NULL)

clean-local :
	rm -f *~
