
NULL =

uidir = $(datadir)/gnome-disk-utility/

ui_DATA = 				\
	edit-crypttab-dialog.ui		\
	edit-filesystem-dialog.ui	\
	edit-fstab-dialog.ui		\
	edit-partition-dialog.ui	\
	edit-gpt-partition-dialog.ui	\
	edit-dos-partition-dialog.ui	\
	disks.ui			\
	unlock-device-dialog.ui		\
	format-volume-dialog.ui		\
	smart-dialog.ui			\
	create-partition-dialog.ui	\
	filesystem-create.ui		\
	format-disk-dialog.ui		\
	create-disk-image-dialog.ui	\
	restore-disk-image-dialog.ui	\
	change-passphrase-dialog.ui	\
	about-dialog.ui			\
	app-menu.ui			\
	benchmark-dialog.ui		\
	disk-settings-dialog.ui		\
	md-raid-disks-dialog.ui		\
	create-raid-array-dialog.ui	\
	erase-multiple-disks-dialog.ui	\
	$(NULL)

EXTRA_DIST = 				\
	$(ui_DATA)			\
	$(NULL)

clean-local :
	rm -f *~
