[package]
name = "gnome-disk-image-mounter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = 'gnome-disk-image-mounter'
path = "main.rs"

[dependencies]
log.workspace = true
env_logger.workspace = true
udisks.workspace = true
gtk.workspace = true
gettext-rs.workspace = true
adw.workspace = true
async-recursion = "1.1.1"
async-channel = "2.3.1"
anyhow = "1.0.86"
libgdu = { path = "../libgdu", version = "0.1.0" }
# disk restore dialog
gnome-disks = { path = "../disks", version = "0.1.0" }
