[package]
name = "gnome-disks"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-2.0-or-later"

# [[bin]]
# name = 'gnome-disks'
# path = "main.rs"

[lib]
path = "lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
log.workspace = true
env_logger.workspace = true
udisks.workspace = true
gtk.workspace = true
gettext-rs.workspace = true
adw.workspace = true
libgdu = { path = "../libgdu", version = "0.1.0" }
libc = "0.2"
itertools = "0.13.0"
liblzma = "0.3.4"
async-std = "1.13.0"
futures = "0.3.31"
nix = { version = "0.30", default-features = false, features = ["ioctl"] }
