[package]
name = "gnome-disks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
log.workspace = true
env_logger.workspace = true
udisks.workspace = true
gtk.workspace = true
gettext-rs.workspace = true
adw.workspace = true
libgdu = { path = "../libgdu", version = "0.1.0" }
libc = "0.2"
itertools = "0.14"
liblzma = "0.4"
async-std = "1.13.0"
futures = "0.3.31"
nix = { version = "0.30", default-features = false, features = ["ioctl"] }
